--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-24 Thu 22:58 -->
+<!-- 2025-04-26 Sat 19:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Welcome</title>
@@ -194,7 +194,7 @@
   .org-svg { }
 </style>
 <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-<div class="home-link"><a href="/">Home</a></div>
+
 <script src="../org-info.js">
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 // @license-end
@@ -219,24 +219,18 @@ org_html_manager.setup();  // activate after the parameters are set
 <div id="content" class="content">
 <h1 class="title">Welcome</h1>
 <p>
-Welcome to my Site
+<code>Hello, World</code>
 </p>
 
 <p>
-This is my presence in Cyperspace.
-I enjoy writing and reading.
-</p>
-
-<p>
-At this point I mainly write and read about technical stuff.
-</p>
-
-<p>
-Below, my <b><b>articles</b></b>
+<b><b>Articles</b></b>
 </p>
 
 <ul class="org-ul">
-<li>emacs
+<li><a href="assisted_learning.html">LLM Assisted Learning</a></li>
+<li><a href="latency_benchmark.html">Latency Benchmark</a></li>
+<li><a href="index.html">Welcome</a></li>
+<li>Emacs Stuff
 <ul class="org-ul">
 <li><a href="emacs/org-website.html">Org mode published personal site.</a></li>
 </ul></li>
@@ -244,7 +238,7 @@ Below, my <b><b>articles</b></b>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-24 Thu 22:58</p>
+<p class="date">Created: 2025-04-26 Sat 19:41</p>
 </div>
 </body>
 </html>
