--- a/emacs/org-website.html
+++ b/emacs/org-website.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-24 Thu 22:31 -->
+<!-- 2025-04-26 Sat 19:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org mode published personal site.</title>
@@ -203,7 +203,7 @@
 <script>
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 org_html_manager.set("TOC_DEPTH", "3");
-org_html_manager.set("LINK_HOME", "");
+org_html_manager.set("LINK_HOME", "/");
 org_html_manager.set("LINK_UP", "");
 org_html_manager.set("LOCAL_TOC", "1");
 org_html_manager.set("VIEW_BUTTONS", "0");
@@ -216,7 +216,11 @@ org_html_manager.setup();  // activate after the parameters are set
 </script>
 </head>
 <body>
-<div id="content" class="content">
+<div id="org-div-home-and-up">
+ <a accesskey="h" href=""> UP </a>
+ |
+ <a accesskey="H" href="/"> HOME </a>
+</div><div id="content" class="content">
 <h1 class="title">Org mode published personal site.</h1>
 <div id="table-of-contents" role="doc-toc">
 <h2>Table of Contents</h2>
@@ -639,7 +643,7 @@ this
 </p>
 
 
-<div class="aside" id="org3c4343e">
+<div class="aside" id="org18e2c9a">
 <p>
 <b><b>Key Idea</b></b>
 In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that modify variables. The example below customizes Org-mode&rsquo;s publishing behavior by setting two variables:
@@ -681,7 +685,7 @@ In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that mo
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-24 Thu 22:31</p>
+<p class="date">Created: 2025-04-26 Sat 19:39</p>
 </div>
 </body>
 </html>
