--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-26 Sat 19:51 -->
+<!-- 2025-04-27 Sun 23:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Index</title>
@@ -198,6 +198,7 @@
 <div id="content" class="content">
 <h1 class="title">Index</h1>
 <ul class="org-ul">
+<li><a href="go-memory-model.html">Go Memory Model</a></li>
 <li><a href="assisted_learning.html">LLM Assisted Learning</a></li>
 <li><a href="latency_benchmark.html">Latency Benchmark</a></li>
 <li><a href="index.html">Welcome</a></li>
@@ -209,7 +210,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-26 Sat 19:51</p>
+<p class="date">Created: 2025-04-27 Sun 23:01</p>
 </div>
 </body>
 </html>
