--- a/assisted_learning.html
+++ b/assisted_learning.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-26 Sat 19:01 -->
+<!-- 2025-04-27 Sun 23:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>LLM Assisted Learning</title>
@@ -193,8 +193,8 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-<div class="home-link"><a href="/">Home</a></div>
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css" /><script src="js/foldable.js"></script>
+
 <script src="../org-info.js">
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 // @license-end
@@ -271,14 +271,13 @@ mechanics of ....X.... from a scientific perspective.
 </pre>
 </div>
 
-
 <p>
 I learn by reading and writing, and learning random shit is probably my main hobby. We are living in a very interesting time period for people like me.
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-26 Sat 19:01</p>
+<p class="date">Created: 2025-04-27 Sun 23:28</p>
 </div>
 </body>
 </html>
