--- a/emacs/org-website.html
+++ b/emacs/org-website.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-26 Sat 19:39 -->
+<!-- 2025-04-27 Sun 23:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org mode published personal site.</title>
@@ -193,7 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type="text/css" href="../css/stylesheet.css" />
+<link rel="stylesheet" type="text/css" href="../css/stylesheet.css" /><script src="../js/foldable.js"></script>
 
 <script src="../org-info.js">
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
@@ -291,7 +291,7 @@ Pretty much done here.
 </p>
 
 <p>
-Here you have <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site">the official guide</a> on how to set this up if you don&rsquo;t like my explanation.
+Here you have <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site">the official guide</a> on how to set this up if you don&rsquo;t like my explanation..
 </p>
 </div>
 </div>
@@ -642,8 +642,7 @@ this
 <a id="orgd220099"></a>
 </p>
 
-
-<div class="aside" id="org18e2c9a">
+<div class="aside" id="orgbac6106">
 <p>
 <b><b>Key Idea</b></b>
 In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that modify variables. The example below customizes Org-mode&rsquo;s publishing behavior by setting two variables:
@@ -685,7 +684,7 @@ In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that mo
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-26 Sat 19:39</p>
+<p class="date">Created: 2025-04-27 Sun 23:28</p>
 </div>
 </body>
 </html>
