--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-27 Sun 23:01 -->
+<!-- 2025-04-27 Sun 23:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Welcome</title>
@@ -193,7 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css" /><script src="js/foldable.js"></script>
 
 <script src="../org-info.js">
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
@@ -223,6 +223,18 @@ org_html_manager.setup();  // activate after the parameters are set
 </p>
 
 <p>
+Welcome to my personal cyber-space.
+</p>
+
+<p>
+This are mainly my notes - but you might find something interesting.
+</p>
+
+<p>
+It&rsquo;s free (as in <i>libre</i>), and also free (as in <i>gratis</i>)
+</p>
+
+<p>
 <b><b>Articles</b></b>
 </p>
 
@@ -234,7 +246,7 @@ org_html_manager.setup();  // activate after the parameters are set
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-27 Sun 23:01</p>
+<p class="date">Created: 2025-04-27 Sun 23:29</p>
 </div>
 </body>
 </html>
