home button fixed

--- a/assisted_learning.html
+++ b/assisted_learning.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-27 Sun 23:28 -->
+<!-- 2025-04-27 Sun 23:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>LLM Assisted Learning</title>
@@ -203,7 +203,7 @@
 <script>
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 org_html_manager.set("TOC_DEPTH", "3");
-org_html_manager.set("LINK_HOME", "");
+org_html_manager.set("LINK_HOME", "/");
 org_html_manager.set("LINK_UP", "");
 org_html_manager.set("LOCAL_TOC", "1");
 org_html_manager.set("VIEW_BUTTONS", "0");
@@ -216,7 +216,11 @@ org_html_manager.setup();  // activate after the parameters are set
 </script>
 </head>
 <body>
-<div id="content" class="content">
+<div id="org-div-home-and-up">
+ <a accesskey="h" href=""> UP </a>
+ |
+ <a accesskey="H" href="/"> HOME </a>
+</div><div id="content" class="content">
 <h1 class="title">LLM Assisted Learning</h1>
 <p>
 I like LLMs for learning new stuff.
@@ -249,35 +253,12 @@ Write with purpose.
 </p>
 
 <p>
-The below could be considered a &ldquo;template&rdquo;, which I have never used (comes out naturally) but
-that is illustrative of what <b>good prompting</b> could be in a simple enough scenario:
-</p>
-
-<div class="org-src-container">
-<pre class="src src-text">You are my sidekick in a rigorous investigation.
-Your answers should be graduate-level for a person outside of the field.
-I am fairly academic, an avid reader and have graduated from an advanced
-engineering degree (5 years of studies) top of my class, so any subject,
-from engineering to the arts, I can surely understand.
-
-Provide appropriate resources when such are available.
-Appropriate resources are documentation pages, wikipedia entries
-or official documents from authorities respected in each subject we investigate.
-
-I stumbled upon .......X........ when researching ............Y.............
-
-Please elaborate on the role ...X... plays in ....Y.... and explain the
-mechanics of ....X.... from a scientific perspective.
-</pre>
-</div>
-
-<p>
 I learn by reading and writing, and learning random shit is probably my main hobby. We are living in a very interesting time period for people like me.
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-27 Sun 23:28</p>
+<p class="date">Created: 2025-04-27 Sun 23:40</p>
 </div>
 </body>
 </html>
