--- a/emacs/org-website.html
+++ b/emacs/org-website.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-27 Sun 23:28 -->
+<!-- 2025-04-27 Sun 23:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org mode published personal site.</title>
@@ -642,7 +642,7 @@ this
 <a id="orgd220099"></a>
 </p>
 
-<div class="aside" id="orgbac6106">
+<div class="aside" id="org144cc9e">
 <p>
 <b><b>Key Idea</b></b>
 In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that modify variables. The example below customizes Org-mode&rsquo;s publishing behavior by setting two variables:
@@ -684,7 +684,7 @@ In Emacs, configuration boils down to evaluating <b>Lisp expressions</b> that mo
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-27 Sun 23:28</p>
+<p class="date">Created: 2025-04-27 Sun 23:39</p>
 </div>
 </body>
 </html>
