--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-04-27 Sun 23:29 -->
+<!-- 2025-04-27 Sun 23:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Welcome</title>
@@ -203,7 +203,7 @@
 <script>
 // @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 org_html_manager.set("TOC_DEPTH", "3");
-org_html_manager.set("LINK_HOME", "");
+org_html_manager.set("LINK_HOME", "/");
 org_html_manager.set("LINK_UP", "");
 org_html_manager.set("LOCAL_TOC", "1");
 org_html_manager.set("VIEW_BUTTONS", "0");
@@ -216,7 +216,11 @@ org_html_manager.setup();  // activate after the parameters are set
 </script>
 </head>
 <body>
-<div id="content" class="content">
+<div id="org-div-home-and-up">
+ <a accesskey="h" href=""> UP </a>
+ |
+ <a accesskey="H" href="/"> HOME </a>
+</div><div id="content" class="content">
 <h1 class="title">Welcome</h1>
 <p>
 <code>Hello, World</code>
@@ -231,7 +235,7 @@ This are mainly my notes - but you might find something interesting.
 </p>
 
 <p>
-It&rsquo;s free (as in <i>libre</i>), and also free (as in <i>gratis</i>)
+It&rsquo;s free (as in <i>libre</i>), and also free (as in <i>gratis</i>).
 </p>
 
 <p>
@@ -246,7 +250,7 @@ It&rsquo;s free (as in <i>libre</i>), and also free (as in <i>gratis</i>)
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Carlos Mavros</p>
-<p class="date">Created: 2025-04-27 Sun 23:29</p>
+<p class="date">Created: 2025-04-27 Sun 23:39</p>
 </div>
 </body>
 </html>
